Fixed Login API bug and Updated YAML file
